Finish static pages

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,2 +1,30 @@
-%h1 StaticPages#home
-%p Find me in app/views/static_pages/home.html.erb
+- provide(:title, "Home")
+
+.Main
+  .Main__left
+
+  .Main__screen
+    .Top
+      .Top__logo
+
+    .Game-area
+      .Static-area
+        .Static-area__logo
+          .Header__logo
+            %h1
+              %span.Header__logo--g
+                g
+              %span.Header__logo--r
+                r
+              %span.Header__logo--o
+                o
+              %span.Header__logo--w
+                w
+            %h2
+              グロウ
+          .Main-title
+            Typing
+            
+          .Ball
+      
+  .Main__right
