Make a devise User model

--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -10,18 +10,19 @@
 
     %nav.Header__nav
       %ul
-        %li
-          = link_to('current_user.name', "#")
-        %li
-          = link_to('ゲームへ！', "#")
-        %li
-          = link_to('文字の登録', "#")
-        %li
-          = link_to('文字の編集', "#")
-        %li
-          = link_to('ログアウト', "#")
-        %li
-          = link_to('ログイン', "#")
-        %li
-          = link_to('新規登録', "#")
-          
+        - if user_signed_in?
+          %li
+            = link_to(current_user.name, edit_user_path(current_user))
+          %li
+            = link_to('ゲームへ！', "static_pages_about_path(current_user.id)")
+          %li
+            = link_to('文字の登録', "new_word_path")
+          %li
+            = link_to('文字の編集', user_path(current_user.id))
+          %li
+            = link_to('ログアウト', destroy_user_session_path, method: :delete)
+        - else
+          %li
+            = link_to('ログイン', new_user_session_path)
+          %li
+            = link_to('新規登録', new_user_registration_path)
