--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -1,3 +1,3 @@
--# .Notice
--#   - flash.each do |key, value|
--#     = content_tag :div, value, class: key
+.Notice
+  - flash.each do |key, value|
+    = content_tag :div, value, class: key
