--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,6 @@
 @import "modules/form";
 @import "modules/users";
 @import "modules/words";
+@import "modules/table";
 @import "font-awesome-sprockets";
 @import "font-awesome";
