--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -16,7 +16,7 @@
           %li
             = link_to('ゲームへ！', "static_pages_about_path(current_user.id)")
           %li
-            = link_to('文字の登録', "new_word_path")
+            = link_to('文字の登録', new_word_path)
           %li
             = link_to('文字の編集', user_path(current_user.id))
           %li
