--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -1,3 +1,2 @@
-.Notice
-  - flash.each do |key, value|
-    = content_tag :div, value, class: key
+- flash.each do |key, value|
+  = content_tag :div, value, class: key, id: "Notice"
