Add varidation to word model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "modules/form";
 @import "modules/users";
 @import "modules/words";
+@import "modules/game";
 @import "modules/table";
 @import "font-awesome-sprockets";
 @import "font-awesome";
