Add a slide menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "modules/notice";
 @import "modules/header";
 @import "modules/footer";
+@import "modules/menu";
 @import "modules/static_pages";
 @import "modules/form";
 @import "modules/users";
