--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -11,18 +11,27 @@
     %nav.Header__nav
       %ul
         - if user_signed_in?
-          %li
-            = link_to(current_user.name, edit_user_path(current_user))
-          %li
-            = link_to('ゲームへ！', game_path(current_user.id))
-          %li
-            = link_to('文字の登録', new_word_path)
-          %li
-            = link_to('文字の編集', user_path(current_user.id))
-          %li
-            = link_to('ログアウト', destroy_user_session_path, method: :delete)
+          #show
+            = icon('fas', 'bars')
         - else
           %li
             = link_to('ログイン', new_user_session_path)
           %li
             = link_to('新規登録', new_user_registration_path)
+            
+
+#Menu
+  #hide
+    = icon('fas', 'times')
+  %ul
+    - if user_signed_in?
+      %li
+        = link_to(current_user.name, edit_user_path(current_user))
+      %li
+        = link_to('ゲームへ！', game_path(current_user.id))
+      %li
+        = link_to('文字の登録', new_word_path)
+      %li
+        = link_to('文字の編集', user_path(current_user.id))
+      %li
+        = link_to('ログアウト', destroy_user_session_path, method: :delete)
