--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -24,7 +24,10 @@
               グロウ
           .Main-title
             Typing
+
+          = link_to('PLAY', game_path(current_user.id), class: "Static-area__btn")
             
-          .Ball
+        .Ball
+
       
   .Main__right
