--- a/app/assets/stylesheets/modules/_static_pages.scss
+++ b/app/assets/stylesheets/modules/_static_pages.scss
@@ -7,14 +7,25 @@
   position: relative;
 
   &__logo {
-    margin: 0 auto;
-    width: 120px;
-    height: 80%;
+    height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
+
+  &__btn {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-top: 50px;
+    padding: 15px 30px;
+    font-size: 30px;
+    &:hover {
+      background-color:  #000;
+      color: #fff;
+    }
+  }
+
   .Main-title {
     font-size: 100px;
     text-align: center;
@@ -39,11 +50,6 @@
 }
 
 @keyframes rollin {
-  from {
-    margin-left: 80%;
-  }
-
-  to {
-    margin-left: 0%;
-  }
+  from { margin-left: 80%; }
+  to { margin-left: 0%; }
 }
