--- a/app/assets/stylesheets/modules/_game.scss
+++ b/app/assets/stylesheets/modules/_game.scss
@@ -130,22 +130,28 @@
 #big-dinosaur {
   display: none;
   position: absolute;
+  left: -1000px;
   animation-duration: 5s;
   animation-timing-function: steps(10, start);
+  animation-iteration-count: 3;
 }
 
 @keyframes run {
   0% {
     transform:translateX(-1000px) translateY(20px) rotate(10deg);
   }
-
   50% {
-    transform:translateX(1000px) translateY(20px) rotate(-10deg);
+    transform:translateX(1500px) translateY(20px) rotate(-10deg);
   }
-
   100% {
-    transform:translateX(-100px) translateY(20px) rotate(-10deg);
+    transform:translateX(-1000px) translateY(20px) rotate(-10deg);
   }
+}
+
+@keyframes sway {
+  0% { transform: rotate(10deg); }
+  50% { transform: rotate(-10deg); }
+  100% { transform: rotate(10deg); }
 }
 
 canvas {
