--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,6 +1,6 @@
 .Footer {
-  background-color: #9cbb1c;
-  border-top: 2px dotted #ea5550;
-  text-align: center;
+  background-color: $green;
+  border-top: $dot-border;
   line-height: 10vh;
+  text-align: center;
 }
