--- a/app/assets/stylesheets/modules/_menu.scss
+++ b/app/assets/stylesheets/modules/_menu.scss
@@ -23,7 +23,7 @@
       font-weight: bold;
       &:hover {
         transition: 0.5s;
-        color: blue;
+        color: deeppink;
       }
     }
   }
