--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,5 @@
-.Account
-  .Account__left
-  .Account__screen
+.Main
+  .User-part
     %h2
       ユーザー情報編集
 
@@ -30,5 +29,3 @@
 
           .Form__action
             = f.submit "更新する"
-
-  .Account__right
