--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,6 +1,5 @@
-.Account
-  .Account__left
-  .Account__screen
+.Main
+  .User-part
     %h2
       新規登録
 
@@ -32,5 +31,3 @@
           = f.submit "登録する"
 
     -# = render "users/shared/links"
-
-  .Account__right
