--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -1,14 +1,36 @@
 .Form {
   margin-top: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend .flex-center;
 
   &__field > input {
     margin: 10px 0 20px;
-    padding: 0 10px;
+    padding: 0 15px;
     width: 500px;
     height: 50px;
     font-size: 20px;
+    letter-spacing: 4px;
+  }
+  &__action > input {
+    float: right;
+    cursor: pointer;
+    background-color: yellow;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 3px 0 $orange;
+    margin-top: 20px;
+    padding: 10px;
+    width: 100px;
+    height: 50px;
+    line-height: 30px;
+    font-size: 16px;
+    text-align: center;
+    &:hover {
+      background-color: gold;
+    }
+    &:active {
+      background-color: $light-yellow;
+      position: relative;
+      top: 3px;
+    }
   }
 }
