--- a/app/assets/stylesheets/modules/_game.scss
+++ b/app/assets/stylesheets/modules/_game.scss
@@ -1,157 +1,21 @@
+@import "variable";
+@import "animation";
+
 .Game-area {
-  background-color: #bbe2f1;
+  background-color: $light-blue;
   width: 900px;
   height: 80vh;
-
-  &__title {
-    height: 95px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    &--btn {
-      border-radius: 5px;
-      margin: 0 40px;
-      padding: 20px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-  }
-
-  &__time {
-    padding: 10px 0 0 20px;
-    display: flex;
-  }
-
-  &__contents {
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 380px;
-    margin: 20px auto;
-    padding: 5px 0;
-    text-align: center;
-    border: 5px solid #fff;
-    border-radius: 10px;
-    color: #fff;
-    
-    h1 {
-      padding: 5px;
-      font-size: 25px;
-    }
-  }
-
-  & p {
-    line-height: 40px;
-    font-size: 18px;
-    font-weight: 500;
-  }
-}
-
-
-#Cover {
-  position: absolute;
-  top: 10vh;
-  left: 0;
-  width: 100vw;
-  height: 80vh;
-  border-top: 2px dotted #ea5550;
-  border-bottom: 2px dotted #ea5550;
-  margin: 0 auto;
-  background-color: #fff3b8;
-  z-index: 10;
-  font-family: 'Comic Sans MS', cursive, '游ゴシック';
-  display: flex;
-  justify-content: center;
-  align-items: center;
   
-  p {
-    font-size: 50px;
-    animation: flashing 3s ease-out infinite;
+  &__time {
+    margin: 40px 0 0 50px;
+    display: flex;
+    font-size: 20px;
   }
-}
-
-#GameOver {
-  position: absolute;
-  top: 10vh;
-  left: 0;
-  width: 100vw;
-  height: 80vh;
-  border-top: 2px dotted #ea5550;
-  border-bottom: 2px dotted #ea5550;
-  margin: 0 auto;
-  background-color: #fff3b8;
-  z-index: 10;
-  font-family: 'Comic Sans MS', cursive, '游ゴシック';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  display: none;
-  p {
-    text-align: center;
+  &__contents {
+    @extend .title;
+    height: 100#{px};
+    line-height: 30px;
   }
-}
-
-@keyframes flashing {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-#dinosaur {
-  width: 100px;
-  height: 100px;
-  background-size: 100px;
-  animation-name: approach;
-  animation-duration: 10s;
-  animation-delay: 5s;
-}
-
-@keyframes approach {
-  0% {
-    margin-left: 50%;
-  }
-
-  50% {
-    margin-left: 0%;
-    margin-top: 5%;
-  }
-
-  100% {
-    margin-left: 50%;
-  }
-}
-
-#big-dinosaur {
-  display: none;
-  position: absolute;
-  left: -1000px;
-  animation-duration: 5s;
-  animation-timing-function: steps(10, start);
-  animation-iteration-count: 3;
-}
-
-@keyframes run {
-  0% {
-    transform:translateX(-1000px) translateY(20px) rotate(10deg);
-  }
-  50% {
-    transform:translateX(1500px) translateY(20px) rotate(-10deg);
-  }
-  100% {
-    transform:translateX(-1000px) translateY(20px) rotate(-10deg);
-  }
-}
-
-@keyframes sway {
-  0% { transform: rotate(10deg); }
-  50% { transform: rotate(-10deg); }
-  100% { transform: rotate(10deg); }
 }
 
 canvas {
@@ -161,3 +25,116 @@ canvas {
   margin: 0 auto;
   cursor: none;
 }
+
+#Cover {
+  z-index: 10;
+  @extend .Main;
+  @extend .flex-center;
+  font-family: $main-font;
+  background-color: $light-yellow;
+  position: absolute;
+  top: 10vh;
+  left: 0;
+  p {
+    font-size: 50px;
+    animation: flashing 3s ease-out infinite;
+  }
+}
+
+#GameOver {
+  display: none;
+  z-index: 10;
+  @extend .Main;
+  position: absolute;
+  top: 10vh;
+  left: 0;
+  
+  .Game-result {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 500px;
+    height: 300px;
+    margin: 30px auto 0;
+    padding: 30px;
+    text-align: center;
+    font-family: $main-font;
+    border: 15px solid $yellow;
+    border-radius: 15px;
+    box-shadow: 0 0 30px #696969;
+    & h1 {
+      font-size: 28px;
+      letter-spacing: 8px;
+    }
+    &__count {
+      width: 50%;
+      margin: 50px 0;
+      text-align: left;
+      font-size: 18px;
+      display: flex;
+      justify-content: space-between;
+    }
+    &__replay {
+      background-color: $red;
+      border: 1px solid $red;
+      border-radius: 5px;
+      padding: 5px 10px;
+      position: relative;
+      left: 150px;
+      bottom: 20px;
+      color: $white;
+      animation: flashing 3s ease-out infinite;
+      &:hover {
+        animation: none;
+      }
+    }
+  }
+}
+
+#small-dinosaur {
+  // display: none;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 40px;
+  left: -100px;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+#middle-dinosaur {
+  display: none;
+  background-color: pink;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  animation-duration: 5s;
+  animation-timing-function: steps(10, start);
+  animation-iteration-count: infinite;
+}
+
+#big-dinosaur {
+  display: none;
+  background-color: pink;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  animation-duration: 5s;
+  animation-timing-function: steps(10, start);
+  animation-iteration-count: infinite;
+}
+
+#running-dinosaur {
+  display: none;
+  position: relative;
+  bottom: 400px;
+  left: -800px;
+  animation-name: run;
+  animation-duration: 5s;
+  animation-timing-function: steps(10, start);
+  animation-iteration-count: infinite;
+}
+
+
