--- a/app/assets/stylesheets/modules/_notice.scss
+++ b/app/assets/stylesheets/modules/_notice.scss
@@ -1,16 +1,33 @@
+@import "variable";
+
 #Notice {
-  background-color: rgba(100, 100, 100, 0.5);
-  border-radius: 3px;
+  z-index: 20;
+  background-color: rgba(255, 20, 147, 0.7);
+  border-radius: 5px;
   position: absolute;
+  top: 160px;
+  left: 40px;
   padding: 10px;
-  top: 150px;
-  left: 80px;
-  width: 200px;
+  width: 400px;
   height: 80px;
-  color: #fff;
+  color: $white;
   text-align: center;
-  line-height: 80px;
   font-weight: bold;
-  font-size: 20px;
-  overflow: hidden;
+  font-size: 16px;
+  line-height: 60px;
+  animation-name: flash;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
