--- a/app/assets/stylesheets/modules/_table.scss
+++ b/app/assets/stylesheets/modules/_table.scss
@@ -1,33 +1,33 @@
 .Table {
-  background-color: pink;
-  border-right: none;
-  border-left: none;
-  width: 900px;
+  margin-top: 20px;
 }
 
+
 table {
-  background-color: white;
-  border: black;
-  border-radius: 5px;
-  margin: 0 auto;
-  width: 900px;
-  height: 573px;
-  thead {
-    background-color: lightskyblue;
-    width: calc(100% / 3);
-    padding: 20px;
-  }
-  tbody {
-    display: block;
-    overflow-y: scroll;
-    width: 900px;
-    height: 550px;
-  }
-  tr {
-    border: 1px solid black;
-  }
-  th, td {
-    width: calc(100% / 3);
-    padding: 20px;
+  width: 100%;
+}
+
+.table-head {
+  width: inherit;
+}
+
+.table-body {
+  border: 1px solid black;
+  height: 350px;
+  display: block;
+  overflow-y: scroll;
+}
+
+th {
+  width: calc(100% / 3);
+  padding: 20px;
+}
+
+td { 
+  width: 280px;
+  padding: 30px 5px;
+  text-align: center;
+  & > a:hover {
+    color: $red;
   }
 }
