--- a/app/assets/stylesheets/modules/_table.scss
+++ b/app/assets/stylesheets/modules/_table.scss
@@ -12,8 +12,9 @@ table {
 }
 
 .table-body {
+  background-color: $white;
   border: 1px solid black;
-  height: 350px;
+  height: 400px;
   display: block;
   overflow-y: scroll;
 }
