--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -10,3 +10,13 @@
     font-size: 40px;
   }
 }
+
+.User-path {
+  float: right;
+  margin: 80px 30px 0 0;
+  font-size: 18px;
+  font-weight: bold;
+  & a:hover {
+    color: $red;
+  }
+}
