--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,21 +4,24 @@
       新規登録
 
     .Form
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = render "users/shared/error_messages", resource: resource
+      = form_with(model: @user, url: user_registration_path, method: :post, local: true) do |f|
 
         .Form__field
           = f.label "名前"
+          = name_error_message
           %br
           = f.text_field :name, autofocus: true, autocomplete: "name"
 
         .Form__field
           = f.label "メールアドレス"
+          .Form__error
+          = email_error_message
           %br
           = f.email_field :email, autofocus: true, autocomplete: "email"
 
         .Form__field
           = f.label "パスワード"
+          = password_error_message
           %br
           = f.password_field :password, autocomplete: "new-password"
 
