Create css directories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,13 +1,13 @@
 @import "reset";
 @import "modules/notice";
-@import "modules/header";
-@import "modules/footer";
-@import "modules/menu";
-@import "modules/static_pages";
+@import "application/header";
+@import "application/footer";
+@import "application/menu";
+@import "static_pages/home";
 @import "modules/form";
-@import "modules/users";
-@import "modules/words";
-@import "modules/game";
-@import "modules/table";
+@import "users/users";
+@import "game/words";
+@import "game/game";
+@import "game/table";
 @import "font-awesome-sprockets";
 @import "font-awesome";
