--- a/app/assets/stylesheets/modules/_variable.scss
+++ b/app/assets/stylesheets/modules/_variable.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $black: #000;
 $green: #9cbb1c;
 $yellow: #ffdc00;
-$red: #d83473;
+$pink: #d83473;
 $orange: #f39800;
 $light-yellow: #fff3b8;
 $light-blue: #bbe2f1; 
