--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -23,7 +23,7 @@
           .Main-title
             Typing
 
-          - if @word.present?
+          - if @current_users_word .present?
             = link_to('PLAY', game_path(current_user.id), class: "Static-area__btn")
           - else
             = link_to('PLAY', new_word_path, class: "Static-area__btn")
