--- a/app/assets/stylesheets/game/_table.scss
+++ b/app/assets/stylesheets/game/_table.scss
@@ -1,3 +1,5 @@
+@import "modules/variable";
+
 .Table {
   margin-top: 20px;
 }
@@ -29,6 +31,6 @@ td {
   padding: 30px 5px;
   text-align: center;
   & > a:hover {
-    color: $red;
+    color: $pink;
   }
 }
