--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,14 @@
       .Page-title__contents
         %h1
           文字の一覧
-      = icon('far', 'question-circle', class: 'Page-title__btn--question')
+      .help-icon
+        = icon('far', 'question-circle', class: 'Page-title__btn--question')
+        .help
+          %p 削除と編集の画面へは
+          %br 文字のクリックで
+          %br 行くことができます。
+          %br 
+
     .Table
       %table
         %thead
